package noticeservice

import "github.com/cherish-chat/xxim-server/common/pb"

type CommonReq = pb.CommonReq
type CommonResp = pb.CommonResp
type AfterConnectReq = pb.AfterConnectReq
type AfterDisconnectReq = pb.AfterDisconnectReq
type KeepAliveReq = pb.KeepAliveReq
type KeepAliveResp = pb.KeepAliveResp
